--- a/PixelSort/app/src/main/res/layout/activity_archive.xml
+++ b/PixelSort/app/src/main/res/layout/activity_archive.xml
@@ -28,6 +28,32 @@
             android:textSize="40dp" />
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/selectOptions"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="#E934495E"
+        android:visibility="gone"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+        <Button
+            android:id="@+id/removeSelection"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#34495e"
+            android:text="Cancel"
+            android:layout_gravity="center"
+            android:layout_marginRight="10dp"/>
+    </LinearLayout>
+
     <ImageView
         android:id="@+id/archives"
         android:layout_width="wrap_content"
@@ -47,6 +73,17 @@
         android:background="@drawable/profile_button"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/selectPhotos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="5dp"
+        android:backgroundTint="#34495e"
+        android:text="Select"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/navbar"
@@ -91,6 +128,77 @@
         android:padding="6dp"
         app:layout_constraintBottom_toTopOf="@+id/navbar"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+    <LinearLayout
+        android:id="@+id/deleteOptions"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:background="#E934495E"
+        android:visibility="gone"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="@+id/navbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <LinearLayout
+            android:id="@+id/deletePhotos"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#F934495E"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:orientation="vertical"
+            android:layout_marginLeft="40dp"
+            android:layout_gravity="center">
+
+            <ImageView
+                android:id="@+id/deleteImage"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:background="@drawable/ic_baseline_delete_outline_24" />
+
+            <TextView
+                android:id="@+id/deleteText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Delete"
+                android:textColor="#ECF0F1"
+                android:fontFamily="@font/roboto"/>
+        </LinearLayout>
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+        <LinearLayout
+            android:id="@+id/unarchivePhotos"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#F934495E"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:orientation="vertical"
+            android:layout_marginRight="40dp"
+            android:layout_gravity="center">
+
+            <ImageView
+                android:id="@+id/unarchiveImage"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:background="@drawable/ic_baseline_unarchive_24" />
+
+            <TextView
+                android:id="@+id/unarchiveText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Unarchive"
+                android:textColor="#ECF0F1"
+                android:fontFamily="@font/roboto"/>
+        </LinearLayout>
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/archiveOptions"
